k8s/media-services/cloudcmd/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudcmd
  namespace: media-services
  labels:
    app: cloudcmd
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: cloudcmd
